# okr_cmake_win

./: CMakeLists.txt  README.md
include/greet/: greet.h
src/: greet.cpp  greet_extra.cpp  main.cpp  tool.cpp  tool_main.cpp
test/: test_greet.cpp
